## 
## 
bin_PROGRAMS = barazad impsxml2json

barazad_SOURCES = main.c cspd.c  sspd.c cspcir.c json.c utils.c cspcommon.c pgconnpool.c cspmessages.c mqueue.c csppresence.c cspim.c cspgroup.c conf.c wbxml.c ssphandler.c sspmessages.c xmpphandler.c dns.c scserver.c baraza.h csp.h cspgroup.h csppresence.h mqueue.h  sspmessages.h xmpphandler.h conf.h cspcir.h cspim.h dns.h pgconnpool.h ssp.h utils.h cspcommon.h cspmessages.h	json.h scserver.h ssphandler.h	wbxml.h

impsxml2json_SOURCES = impsxml2json.c json.c json.h cspmessages.c cspmessages.h utils.c utils.h wbxml.c  cspim.c  csppresence.c  cspcommon.c  mqueue.c cspgroup.c  cspcir.c pgconnpool.c sspd.c

EXTRA_DIST = tables.sql cspmessages.def wbxml.def LICENSE VERSION

